# Hdhdhdhd

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/il2cpp_lens/: __init__.py  cli.py  detect.py  macho.py  metadata.py  models.py
tests/: test_detector.py  test_macho.py  test_metadata.py
