[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "il2cpp-lens"
version = "0.1.0"
description = "Filename-independent IL2CPP metadata scanner and inspector"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "IL2CPP Lens contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
il2cpp-lens = "il2cpp_lens.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
